Delete newline at the end of ouput file

--- a/lab_08_1_12/makefile
+++ b/lab_08_1_12/makefile
@@ -12,7 +12,7 @@ endif
 app.exe: $(OBJS) main.o
 	gcc $(LFLAGS) -o $@ $^
 
-test.exe: $(OBJS) test.o
+test.exe: matrix.o test.o
 	gcc $(LFLAGS) -o $@ $^
 
 %.o: %.c %.h
