Fix test_my_strcmp, add error for empty input files

--- a/lab_09_1/makefile
+++ b/lab_09_1/makefile
@@ -1,11 +1,13 @@
 CFLAGS = -std=c99 -Wall -Werror -pedantic
-LDFLAGS = -s -pipe
 
 test.exe: my_strspn.o test.o
-	gcc $(LDFLAGS) -o $@ $^
+	gcc -o $@ $^
 
 %.o: %.c %.h
-	gcc $(CFLAGS) -o $@ -c $<
+	gcc $(CFLAGS) -c $<
+
+%.o: %.c
+	gcc $(CFLAGS) -c $<
 
 clean:
 	rm -f *.o *.exe 2>/dev/null
