--- a/lab_09_2/makefile
+++ b/lab_09_2/makefile
@@ -1,11 +1,11 @@
-CFLAGS = -std=c99 -Wall -Werror -pedantic
+CFLAGS = -std=gnu99 -Wall -Werror -pedantic
 OBJS = info.o my_string.o my_getline.o str_replace.o interface.o
 
 app.exe: $(OBJS) main.o
 	gcc -o $@ $^
 
 test.exe: $(OBJS) test.o
-	gcc $(LDFLAGS) -o $@ $^
+	gcc -o $@ $^
 
 %.o: %.c %.h
 	gcc $(CFLAGS) -c $<
