--- a/lab_12_2_1/makefile
+++ b/lab_12_2_1/makefile
@@ -4,16 +4,16 @@ CFLAGS := -std=c99 -Wall -Werror -pedantic
 .PHONY: clean
 
 test.exe: test.o libarr.so
-	$(CC) -o $@ $^ -L. -larr -Wl,-rpath,. -lm
+	$(CC) $(CFLAGS) -o $@ $^ -L. -larr -Wl,-rpath,. -lm
 
 libarr.so: shift.o copy_squares.o c_print.o gcd.o is_square.o
-	$(CC) -o $@ -shared $^
+	$(CC) $(CFLAGS) -o $@ -shared $^
 
 %.o: %.c %.h
-	$(CC) -c -fPIC $<
+	$(CC) $(CFLAGS) -c -fPIC $<
 
 %.o: %.c arr_lib.h
-	$(CC) -c -fPIC $<
+	$(CC) $(CFLAGS) -c -fPIC $<
 
 clean:
 	rm *.o *.exe *.so 2>/dev/null
